RESOLVED FIXED24916
REGRESSION: NavigationAction policy dispatch broken
https://bugs.webkit.org/show_bug.cgi?id=24916
Summary REGRESSION: NavigationAction policy dispatch broken
Xan Lopez
Reported 2009-03-28 17:11:39 PDT
In www.reddit.com, when clicking any link to the comments (those with name XXX comments, where XXX is a number), the data that arrives to the dispatchDecidePolicyForNavigationAction is incomplete: the action type is wrong, and the event associated with it lacks any data about button the key modifier keys pressed. This was working in r42054, and I'd say it broke in the next commit by Darin (r42055), but I won't get to test it properly tonight.
Attachments
reduced test case (395 bytes, text/html)
2009-03-30 06:46 PDT, Gustavo Noronha (kov)
no flags
patch (2.77 KB, patch)
2009-03-30 10:22 PDT, Darin Adler
aroben: review+
Gustavo Noronha (kov)
Comment 1 2009-03-28 18:11:40 PDT
I tried building the revision 42055 with the patch from 42069 (gtk+ build fix after 42055), and it doesn't work, indeed. I also tried revision 42054 with the patch from 42069, just to be sure it is not our fix that breaks it, and it works. So it seems like 42055 caused the problem, indeed.
Gustavo Noronha (kov)
Comment 2 2009-03-30 06:46:12 PDT
Created attachment 29072 [details] reduced test case The problem seems to happen for links with target="_parent". I haven't bothered creating a page with actual framesets, but that may be a good thing to do for a layout test.
Darin Adler
Comment 3 2009-03-30 10:22:58 PDT
Adam Roben (:aroben)
Comment 4 2009-03-30 10:25:40 PDT
Comment on attachment 29076 [details] patch r=me
Darin Adler
Comment 5 2009-03-30 10:26:46 PDT
Note You need to log in before you can comment on or make changes to this bug.